proj1/tests/correct/basicprint.py
print 10
print 'str'

