proj1/tests/error/hex.py
i = 0xFFFFFFFFF
print 'str'

